# services/ingestion-service/internal/driver/http/generated/types.gen.go
@@ -3,6 +3,24 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package generated
 
+// Defines values for CreateSnapshotRequestCheckpointHour.
+const (
+	N0   CreateSnapshotRequestCheckpointHour = 0
+	N12  CreateSnapshotRequestCheckpointHour = 12
+	N168 CreateSnapshotRequestCheckpointHour = 168
+	N24  CreateSnapshotRequestCheckpointHour = 24
+	N3   CreateSnapshotRequestCheckpointHour = 3
+	N48  CreateSnapshotRequestCheckpointHour = 48
+	N6   CreateSnapshotRequestCheckpointHour = 6
+	N72  CreateSnapshotRequestCheckpointHour = 72
+)
+
+// Defines values for WebSubVerifyParamsHubMode.
+const (
+	Subscribe   WebSubVerifyParamsHubMode = "subscribe"
+	Unsubscribe WebSubVerifyParamsHubMode = "unsubscribe"
+)
+
 // CollectSubscriptionsResponse defines model for CollectSubscriptionsResponse.
 type CollectSubscriptionsResponse struct {
 	ChannelsProcessed int32  `json:"channelsProcessed"`
@@ -17,6 +35,15 @@ type CollectTrendingResponse struct {
 	VideosAdded     int32  `json:"videosAdded"`
 	VideosProcessed int32  `json:"videosProcessed"`
 }
+
+// CreateSnapshotRequest defines model for CreateSnapshotRequest.
+type CreateSnapshotRequest struct {
+	CheckpointHour CreateSnapshotRequestCheckpointHour `json:"checkpointHour"`
+	VideoId        string                              `json:"videoId"`
+}
+
+// CreateSnapshotRequestCheckpointHour defines model for CreateSnapshotRequest.CheckpointHour.
+type CreateSnapshotRequestCheckpointHour float32
 
 // Error defines model for Error.
 type Error struct {
@@ -61,3 +88,31 @@ type AdminUpdateChannelsParams struct {
 	XCloudSchedulerJobName      string `json:"X-CloudScheduler-JobName"`
 	XCloudSchedulerScheduleTime string `json:"X-CloudScheduler-ScheduleTime"`
 }
+
+// TasksCreateSnapshotParams defines parameters for TasksCreateSnapshot.
+type TasksCreateSnapshotParams struct {
+	XCloudTasksTaskName           string `json:"X-CloudTasks-TaskName"`
+	XCloudTasksQueueName          string `json:"X-CloudTasks-QueueName"`
+	XCloudTasksTaskRetryCount     int32  `json:"X-CloudTasks-TaskRetryCount"`
+	XCloudTasksTaskExecutionCount int32  `json:"X-CloudTasks-TaskExecutionCount"`
+	XCloudTasksTaskETA            string `json:"X-CloudTasks-TaskETA"`
+}
+
+// WebSubNotifyParams defines parameters for WebSubNotify.
+type WebSubNotifyParams struct {
+	XHubSignature string `json:"X-Hub-Signature"`
+}
+
+// WebSubVerifyParams defines parameters for WebSubVerify.
+type WebSubVerifyParams struct {
+	HubMode         WebSubVerifyParamsHubMode `form:"hub.mode" json:"hub.mode"`
+	HubTopic        string                    `form:"hub.topic" json:"hub.topic"`
+	HubChallenge    string                    `form:"hub.challenge" json:"hub.challenge"`
+	HubLeaseSeconds *int32                    `form:"hub.lease_seconds,omitempty" json:"hub.lease_seconds,omitempty"`
+}
+
+// WebSubVerifyParamsHubMode defines parameters for WebSubVerify.
+type WebSubVerifyParamsHubMode string
+
+// TasksCreateSnapshotJSONRequestBody defines body for TasksCreateSnapshot for application/json ContentType.
+type TasksCreateSnapshotJSONRequestBody = CreateSnapshotRequest
